--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -52,7 +52,7 @@ jobs:
       - name: 🏗️📤 Build and push 🐳 image
         uses: docker/build-push-action@v4.0.0
         with:
-          context: ./docker/
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
